[package]
name = "crane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tempfile = "*"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }